# german_voicer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  desktop-build.yml
desktop/: package.json
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
scripts/: build_backend_dist.ps1  build_backend_dist.sh  build_desktop_linux.sh  build_desktop_windows.ps1
src/voice_german_cloner/: __main__.py  backend_server.py  core.py  ref_audio_transcribe.py  translation.py  web.py
tests/: test_web_app.py
