[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-german-cloner"
version = "0.1.0"
description = "Translate English to German locally, then speak German with Qwen3-TTS voice cloning."
requires-python = ">=3.10,<3.12"
dependencies = [
  "qwen-tts>=0.1.1",
  "librosa>=0.10.1",
  "soundfile>=0.12.1",
  "Flask>=3.0.0",
  "sentencepiece>=0.1.99",
  "sacremoses>=0.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
voice-german-cloner = "voice_german_cloner.__main__:main"
voice-german-web = "voice_german_cloner.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
